# postgres

./: .cirrus.yml  configure  configure.ac  meson.build  meson_options.txt
contrib/: meson.build
contrib/amcheck/: meson.build
contrib/basic_archive/: basic_archive.c
contrib/cube/: meson.build
contrib/hstore/: meson.build
contrib/hstore_plpython/: meson.build
contrib/hstore_plpython/expected/: meson.build
contrib/hstore_plpython/sql/: meson.build
contrib/jsonb_plpython/: Makefile  jsonb_plpython.c  meson.build
contrib/jsonb_plpython/expected/: meson.build
contrib/jsonb_plpython/sql/: meson.build
contrib/pg_buffercache/: meson.build
contrib/pg_prewarm/: meson.build
contrib/pg_visibility/: meson.build
contrib/pg_walinspect/: meson.build
contrib/tcn/: meson.build
contrib/test_decoding/: meson.build
contrib/test_decoding/expected/: stats.out
contrib/test_decoding/sql/: stats.sql
contrib/unaccent/: meson.build
src/backend/: meson.build
src/backend/bootstrap/: bootscanner.l  bootstrap.c
src/backend/catalog/: Makefile  description.sql  heap.c  index.c  pg_proc.c  privileges.sql  storage.c  system_functions.sql  system_views.sql
src/backend/commands/: analyze.c  dbcommands.c  extension.c  matview.c  subscriptioncmds.c  tablespace.c  vacuum.c
src/backend/executor/: execGrouping.c
src/backend/lib/: dshash.c
src/backend/main/: main.c
src/backend/nodes/: gen_node_support.pl  nodes.c
src/backend/parser/: meson.build
src/backend/port/: win32_sema.c
src/backend/postmaster/: autovacuum.c  bgwriter.c  checkpointer.c  pgarch.c  pgstat.c  postmaster.c  walwriter.c
src/backend/replication/: basebackup.c  basebackup_target.c  meson.build  slot.c  walreceiver.c
src/backend/snowball/: Makefile  meson.build  snowball_create.pl
src/backend/tcop/: postgres.c
src/backend/tsearch/: wparser_def.c
src/backend/utils/: Gen_fmgrtab.pl  Makefile  meson.build
src/common/: meson.build
src/common/unicode/: generate-unicode_norm_table.pl
src/include/: c.h  fmgr.h  funcapi.h  getaddrinfo.h  getopt_long.h  meson.build  miscadmin.h  pg_config.h.in  pg_config_manual.h  pg_getopt.h  pgstat.h  pgtar.h  pgtime.h  port.h  postgres.h  rusagestub.h  windowapi.h
src/include/access/: amapi.h  amvalidate.h  attmap.h  brin.h  brin_internal.h  brin_pageops.h  brin_revmap.h  brin_tuple.h  brin_xlog.h  bufmask.h  clog.h  commit_ts.h  detoast.h  genam.h  generic_xlog.h  gin.h  gin_private.h  ginblock.h  ginxlog.h  gist_private.h  gistscan.h  gistxlog.h  hash.h  hash_xlog.h  heapam.h  heapam_xlog.h  heaptoast.h  hio.h  htup.h  htup_details.h  itup.h  multixact.h  nbtree.h  nbtxlog.h  parallel.h  printsimple.h  printtup.h  relation.h  reloptions.h  rewriteheap.h  (+31 more)
src/include/bootstrap/: bootstrap.h
src/include/catalog/: catalog.h  catversion.h  dependency.h  heap.h  index.h  indexing.h  meson.build  namespace.h  objectaccess.h  objectaddress.h  partition.h  pg_aggregate.h  pg_attrdef.h  pg_cast.h  pg_class.h  pg_collation.h  pg_constraint.h  pg_conversion.h  pg_db_role_setting.h  pg_enum.h  pg_inherits.h  pg_largeobject.h  pg_namespace.h  pg_operator.h  pg_parameter_acl.h  pg_proc.h  pg_publication.h  pg_range.h  pg_subscription.h  pg_subscription_rel.h  pg_type.h  storage.h  storage_xlog.h  toasting.h
src/include/commands/: alter.h  async.h  cluster.h  collationcmds.h  comment.h  conversioncmds.h  copy.h  copyfrom_internal.h  createas.h  dbcommands.h  dbcommands_xlog.h  defrem.h  discard.h  event_trigger.h  explain.h  extension.h  lockcmds.h  matview.h  policy.h  portalcmds.h  prepare.h  proclang.h  publicationcmds.h  schemacmds.h  seclabel.h  sequence.h  subscriptioncmds.h  tablecmds.h  tablespace.h  trigger.h  typecmds.h  user.h  vacuum.h  variable.h  view.h
src/include/common/: archive.h  base64.h  checksum_helper.h  compression.h  config_info.h  controldata_utils.h  cryptohash.h  fe_memutils.h  file_perm.h  file_utils.h  hashfn.h  hmac.h  ip.h  jsonapi.h  kwlookup.h  link-canary.h  md5.h  openssl.h  pg_lzcompress.h  pg_prng.h  relpath.h  saslprep.h  scram-common.h  string.h  unicode_norm.h  username.h
src/include/executor/: execAsync.h  execExpr.h  execParallel.h  execPartition.h  execdesc.h  executor.h  functions.h  instrument.h  nodeAgg.h  nodeAppend.h  nodeBitmapAnd.h  nodeBitmapHeapscan.h  nodeBitmapIndexscan.h  nodeBitmapOr.h  nodeCtescan.h  nodeCustom.h  nodeForeignscan.h  nodeFunctionscan.h  nodeGather.h  nodeGatherMerge.h  nodeGroup.h  nodeHash.h  nodeHashjoin.h  nodeIncrementalSort.h  nodeIndexonlyscan.h  nodeIndexscan.h  nodeLimit.h  nodeLockRows.h  nodeMaterial.h  nodeMemoize.h  nodeMergeAppend.h  nodeMergejoin.h  nodeModifyTable.h  nodeNamedtuplestorescan.h  nodeNestloop.h  nodeProjectSet.h  nodeRecursiveunion.h  nodeResult.h  nodeSamplescan.h  nodeSeqscan.h  (+15 more)
src/include/fe_utils/: archive.h  cancel.h  conditional.h  connect_utils.h  mbprint.h  option_utils.h  parallel_slot.h  print.h  psqlscan.h  psqlscan_int.h  query_utils.h  recovery_gen.h  simple_list.h  string_utils.h
src/include/foreign/: fdwapi.h  foreign.h
src/include/jit/: jit.h  llvmjit.h
src/include/lib/: binaryheap.h  bipartite_match.h  bloomfilter.h  dshash.h  hyperloglog.h  ilist.h  integerset.h  knapsack.h  pairingheap.h  rbtree.h  stringinfo.h
src/include/libpq/: auth.h  be-fsstubs.h  be-gssapi-common.h  crypt.h  hba.h  ifaddr.h  libpq-be.h  libpq.h  pqformat.h  pqmq.h  pqsignal.h  sasl.h  scram.h
src/include/mb/: pg_wchar.h  stringinfo_mb.h
src/include/nodes/: bitmapset.h  execnodes.h  extensible.h  makefuncs.h  memnodes.h  nodeFuncs.h  nodes.h  params.h  pathnodes.h  pg_list.h  print.h  readfuncs.h  tidbitmap.h  value.h
src/include/optimizer/: appendinfo.h  clauses.h  cost.h  geqo.h  geqo_copy.h  geqo_misc.h  geqo_mutation.h  geqo_pool.h  geqo_random.h  geqo_recombination.h  geqo_selection.h  inherit.h  joininfo.h  optimizer.h  orclauses.h  paramassign.h  pathnode.h  paths.h  placeholder.h  plancat.h  planmain.h  planner.h  prep.h  restrictinfo.h  subselect.h  tlist.h
src/include/parser/: analyze.h  gramparse.h  meson.build  parse_agg.h  parse_clause.h  (+18 more)
(+387 files in other folders)
