contrib_mod_args = pg_mod_args

contrib_data_dir = get_option('datadir') / 'extension'
contrib_data_args = {
  'install_dir': contrib_data_dir
}

subdir('adminpack')
subdir('amcheck')
subdir('auth_delay')
subdir('auto_explain')
subdir('bloom')
subdir('bool_plperl')
subdir('btree_gin')
subdir('btree_gist')
subdir('citext')
subdir('cube')
subdir('dblink')
subdir('dict_int')
subdir('dict_xsyn')
subdir('earthdistance')
subdir('file_fdw')
subdir('fuzzystrmatch')
subdir('hstore')
subdir('hstore_plperl')
subdir('hstore_plpython')
# TODO: intagg
# TODO: intarray
# TODO: isn
subdir('jsonb_plperl')
subdir('jsonb_plpython')
# TODO: lo
# TODO: ltree
# TODO: ltree_plpython
subdir('oid2name')
# TODO: old_snapshot
subdir('pageinspect')
# TODO: passwordcheck
# TODO: pg_buffercache
# TODO: pgcrypto
# TODO: pg_freespacemap
subdir('pg_prewarm')
# TODO: pgrowlocks
subdir('pg_stat_statements')
# TODO: pgstattuple
# TODO: pg_surgery
subdir('pg_trgm')
subdir('pg_visibility')
subdir('postgres_fdw')
# TODO: seg
# TODO: sepgsql
subdir('spi')
# TODO: sslinfo
# TODO: start-scripts
# TODO: tablefunc
# TODO: tcn
subdir('test_decoding')
subdir('tsm_system_rows')
subdir('tsm_system_time')
subdir('unaccent')
# TODO: uuid-ossp
subdir('vacuumlo')
subdir('xml2')
